adapted to Java 1.9